[package]
name = "oklink-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "oklink"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3"
